--- a/visualizer.ui
+++ b/visualizer.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Visualizer</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -63,7 +63,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="controlLayout">
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
@@ -80,7 +80,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QPushButton" name="pushButton_13">
+          <widget class="QPushButton" name="decSpeedButton">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -93,7 +93,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_12">
+          <widget class="QPushButton" name="playPauseButton">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -106,7 +106,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_11">
+          <widget class="QPushButton" name="incSpeedButton">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -119,7 +119,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_14">
+          <widget class="QPushButton" name="resetSpeedButton">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -127,7 +127,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>R</string>
+            <string>r sp</string>
            </property>
           </widget>
          </item>
@@ -136,7 +136,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
-          <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0" columnstretch="0,0,0,0,0">
+          <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0" columnstretch="0,0,0,0,0">
            <item row="0" column="0">
             <widget class="QLabel" name="label">
              <property name="text">
@@ -210,9 +210,9 @@
           </layout>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_15">
+          <widget class="QPushButton" name="restartButton">
            <property name="text">
-            <string>Reset</string>
+            <string>restart</string>
            </property>
           </widget>
          </item>
@@ -221,7 +221,7 @@
       </layout>
      </item>
      <item>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="viewControlLayout">
        <item row="1" column="1">
         <widget class="QPushButton" name="centerButton">
          <property name="sizePolicy">
@@ -248,7 +248,7 @@
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QPushButton" name="pushButton_6">
+        <widget class="QPushButton" name="leftButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -268,12 +268,12 @@
           </size>
          </property>
          <property name="text">
-          <string>L</string>
+          <string>←</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QPushButton" name="pushButton_8">
+        <widget class="QPushButton" name="downButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -293,12 +293,12 @@
           </size>
          </property>
          <property name="text">
-          <string>D</string>
+          <string>↓</string>
          </property>
         </widget>
        </item>
        <item row="2" column="2">
-        <widget class="QPushButton" name="pushButton_9">
+        <widget class="QPushButton" name="resetZoomButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -318,12 +318,12 @@
           </size>
          </property>
          <property name="text">
-          <string>/</string>
+          <string>rz</string>
          </property>
         </widget>
        </item>
        <item row="1" column="2">
-        <widget class="QPushButton" name="pushButton_7">
+        <widget class="QPushButton" name="rightButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -343,12 +343,12 @@
           </size>
          </property>
          <property name="text">
-          <string>R</string>
+          <string>→</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="resetButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -368,12 +368,12 @@
           </size>
          </property>
          <property name="text">
-          <string>\</string>
+          <string>ra</string>
          </property>
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="zoomInButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -393,7 +393,7 @@
           </size>
          </property>
          <property name="text">
-          <string>\</string>
+          <string>+</string>
          </property>
         </widget>
        </item>
@@ -418,12 +418,12 @@
           </size>
          </property>
          <property name="text">
-          <string>U</string>
+          <string>↑</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="zoomOutButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
@@ -443,14 +443,14 @@
           </size>
          </property>
          <property name="text">
-          <string>/</string>
+          <string>-</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <layout class="QVBoxLayout" name="menuLayout">
        <item>
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
@@ -465,6 +465,9 @@
         </spacer>
        </item>
        <item>
+        <widget class="QComboBox" name="chooseBox"/>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton_10">
          <property name="text">
           <string>choose...</string>
@@ -472,7 +475,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_5">
+        <widget class="QPushButton" name="exitButton">
          <property name="text">
           <string>Exit</string>
          </property>
@@ -481,6 +484,19 @@
       </layout>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="statusBar">
+     <property name="frameShape">
+      <enum>QFrame::Panel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text">
+      <string>status</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
