--- a/visualizer.ui
+++ b/visualizer.ui
@@ -173,21 +173,33 @@
             </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QCheckBox" name="checkBox">
+            <widget class="QCheckBox" name="shCenterCheckBox">
+             <property name="toolTip">
+              <string>Show center</string>
+             </property>
              <property name="text">
               <string/>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QCheckBox" name="checkBox_2">
+            <widget class="QCheckBox" name="shLookAtCheckBox">
+             <property name="toolTip">
+              <string>Show looking at lines</string>
+             </property>
              <property name="text">
               <string/>
              </property>
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QCheckBox" name="checkBox_3">
+            <widget class="QCheckBox" name="shBestPosCheckBox">
+             <property name="toolTip">
+              <string>Show best value pos</string>
+             </property>
              <property name="text">
               <string/>
              </property>
@@ -195,6 +207,9 @@
            </item>
            <item row="1" column="3">
             <widget class="QCheckBox" name="checkBox_4">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string/>
              </property>
@@ -202,6 +217,9 @@
            </item>
            <item row="1" column="4">
             <widget class="QCheckBox" name="checkBox_5">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string/>
              </property>
@@ -468,9 +486,9 @@
         <widget class="QComboBox" name="chooseBox"/>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_10">
+        <widget class="QPushButton" name="chooseButton">
          <property name="text">
-          <string>choose...</string>
+          <string>choose..</string>
          </property>
         </widget>
        </item>
