--- a/visualizer.ui
+++ b/visualizer.ui
@@ -237,6 +237,25 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="makeGifButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>25</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>gif</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
@@ -486,7 +505,24 @@
         </spacer>
        </item>
        <item>
-        <widget class="QComboBox" name="chooseBox"/>
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QComboBox" name="chooseBox"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="refreshButton">
+           <property name="maximumSize">
+            <size>
+             <width>25</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>R</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
