--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -84,37 +84,13 @@
        </layout>
       </item>
       <item>
-       <widget class="QFrame" name="frame">
-        <property name="minimumSize">
-         <size>
-          <width>200</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>60</height>
-         </size>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::Panel</enum>
-        </property>
+       <widget class="QTextBrowser" name="runStatus">
         <property name="frameShadow">
          <enum>QFrame::Sunken</enum>
         </property>
-        <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="runStatusLabel">
-           <property name="toolTip">
-            <string>status ololo</string>
-           </property>
-           <property name="text">
-            <string>status</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <property name="placeholderText">
+         <string>status</string>
+        </property>
        </widget>
       </item>
       <item>
